Comentarios explicativos agregados

--- a/frm_ventas.html
+++ b/frm_ventas.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="https://kit.fontawesome.com/0e1554a48e.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/0e1554a48e.js" crossorigin="anonymous"></script><!-- Se utiliza para icons, como las flechas para los links -->
     <title>Formulario de ventas</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/style_ventas.css">
