--- a/frm_ventas.html
+++ b/frm_ventas.html
@@ -19,7 +19,7 @@
 
         <h1 class="title">Gestión de ventas</h1>
 
-        <label for="codigo">ID</label>
+        <label for="identificador">ID</label>
         <input type="number" name="identificador" maxlength="3" id="identificador" placeholder="ID de la venta" >
         
         <label for="nombre">Juguete</label>
